k8s/applications/network/omada/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omada-controller
  namespace: omada
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: omada-controller
  template:
    metadata:
      labels:
        app: omada-controller
    spec:
      securityContext:
        runAsUser: 508
        runAsGroup: 508
        runAsNonRoot: true
        fsGroup: 508
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: omada-controller
        image: mbentley/omada-controller:5.15
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        resources:
          requests: {cpu: 100m, memory: 512Mi}
          limits:   {cpu: 750m, memory: 2Gi}
        ports:
        - containerPort: 8088
          name: manage-http
          protocol: TCP
        - containerPort: 8043
          name: manage-https
          protocol: TCP
        - containerPort: 8843
          name: porta-https
          protocol: TCP
        - containerPort: 27001
          name: app-discovery
          protocol: UDP
        - containerPort: 29810
          name: discovery
          protocol: UDP
        - containerPort: 29811
          name: discovery-v1
          protocol: TCP
        - containerPort: 29813
          name: upgrade-v1
          protocol: TCP
        - containerPort: 29814
          name: manager-v1
          protocol: TCP
        - containerPort: 29815
          name: transfer-v2
          protocol: TCP
        - containerPort: 29816
          name: rtty
          protocol: TCP
        volumeMounts:
          - name: omada-data
            mountPath: /opt/tplink/EAPController/data
          - name: omada-logs
            mountPath: /opt/tplink/EAPController/logs
          - name: omada-certs
            mountPath: /cert
            readOnly: true
      volumes:
      - name: omada-data
        persistentVolumeClaim:
          claimName: omada-data-pvc
      - name: omada-logs
        persistentVolumeClaim:
          claimName: omada-logs-pvc
      - name: omada-certs
        secret:
          secretName: cert-omada
          items:
            - key: tls.crt
              path: tls.crt
            - key: tls.key
              path: tls.key
      restartPolicy: Always
